fixed overlapping issue

--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -9,19 +9,29 @@
 }
 
 .Slides {
-    max-width: 55%; 
-    margin-top: 7rem; 
+    /* max-width: 80%;  */
+    max-height: 100rem;
+    margin-top: 5rem; 
     padding: 1rem;
     box-sizing: border-box;
+
+    position: relative;
+    overflow: hidden;
 }
 
 .image-gallery-slide img {
     width: 100%; 
-    height: auto; 
+    height: 100%; 
     object-fit: contain; 
     padding: 2rem;
-}
 
+    width: 300rem;  /* Set a fixed width */
+    height: 200rem; /* Set a fixed height */
+    overflow: hidden; /* Hide overflow to maintain consistency */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* For tablets */
 @media (max-width: 768px) {
@@ -37,4 +47,9 @@
         max-width: 100%; /* Full width on small screens */
         margin-top: 3rem; /* Reduce top margin further */
     }
+}
+
+/* Hide the thumbnails section */
+.image-gallery-thumbnails {
+    display: none; /* Completely hide thumbnails */
 }
