--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -4,6 +4,10 @@ nav{
  /* background-image: linear-gradient(#283618,#B7B7A4); */
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 #navBar{
     list-style: none;
     display:flex;
